[project]
name = "tddft-simulation-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colour-science>=0.4.6",
    "geometric>=1.1",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "plotly>=6.2.0",
    "py3dmol>=2.5.1",
    "pymixbox>=2.0.0",
    "pyscf>=2.9.0",
    "scipy>=1.16.0",
    "sympy>=1.14.0",
]

[dependency-groups]
dev = [
    "typer>=0.16.1",
]
